objects/nFORCE__Data_Snapshot_Item__c.object
<CustomObject>
    <description>The Data Snapshot Item object is used to store the Context ID of the records to be stored in the Data Snapshot Archive big object.</description>
    <fields>
        <fullName>nFORCE__Context_Id__c</fullName>
        <description>The system automatically populates this required field with the 18 character Salesforce ID of the record to be captured in the Data Snapshot Archive big object.</description>
        <externalId>true</externalId>
        <label>Context Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nFORCE__Data_Snapshot__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>The system automatically populates this required field with the lookup to the snapshot record.</description>
        <label>Snapshot</label>
        <referenceTo>nFORCE__Data_Snapshot__c</referenceTo>
        <relationshipLabel>Data Snapshot Items</relationshipLabel>
        <relationshipName>Data_Snapshot_Items</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>nFORCE__Job_Id__c</fullName>
        <description>The system automatically populates this text field with the Job Id after the asynchronous job is queued to write the data from the record associated with the Context_Id__c field in the Data_Snapshot_Item_c object to the Data_Snapshot_Archive_b object.</description>
        <label>Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Data Snapshot Item</label>
    <nameField>
        <displayFormat>DSI-{0000000000}</displayFormat>
        <label>Data Snapshot Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Data Snapshot Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>